force-app/main/default/objects/Contact/fields/Channel_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Channel_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Channel Newsletter</label>
    <type>Checkbox</type>
</CustomField>