force-app/main/default/objects/Contact/fields/ddm__LatestScoreEvaluation__c.field-meta.xml
<CustomField>
    <fullName>ddm__LatestScoreEvaluation__c</fullName>
    <description>The last time scores were evaluated on your Dotdigital account</description>
    <inlineHelpText>The last time scores were evaluated on your Email Marketing account</inlineHelpText>
    <label>Latest Score Evaluation</label>
    <type>DateTime</type>
</CustomField>