force-app/main/default/objects/Contact/fields/ddm__OverallScore__c.field-meta.xml
<CustomField>
    <fullName>ddm__OverallScore__c</fullName>
    <description>The overall score for this contact, formed of the engagement and suitability components</description>
    <inlineHelpText>The overall score for this contact, formed of the engagement and suitability components</inlineHelpText>
    <label>Overall Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>