force-app/main/default/objects/Contact/fields/Lead_Source_Reference__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Reference__c</fullName>
    <label>Lead Source Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>