force-app/main/default/objects/Contact/fields/M12_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>M12_Contact_ID__c</fullName>
    <description>Unique ID for each contact</description>
    <displayFormat>C-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>GN Contact ID</label>
    <type>AutoNumber</type>
</CustomField>