force-app/main/default/objects/Contact/fields/Marketing_Cloud_Sync__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Sync__c</fullName>
    <formula>NOT((ISBLANK(Email)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Cloud Sync</label>
    <type>Checkbox</type>
</CustomField>