force-app/main/default/objects/Contact/fields/Paid_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Paid_Lead_Source__c</fullName>
    <label>Paid Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved Index</fullName>
            </value>
            <value>
                <fullName>Market Expert</fullName>
            </value>
            <value>
                <fullName>Zone Marketing</fullName>
            </value>
            <value>
                <fullName>Pursuit Marketing</fullName>
            </value>
            <value>
                <fullName>Fulcio</fullName>
            </value>
            <value>
                <fullName>Office Moves</fullName>
            </value>
            <value>
                <fullName>Corpdata</fullName>
            </value>
            <value>
                <fullName>Education Company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>