force-app/main/default/objects/Contact/fields/quit_organisation__c.field-meta.xml
<CustomField>
    <fullName>quit_organisation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this contact has left/resigned from this organisation</inlineHelpText>
    <label>Quit Organisation</label>
    <type>Checkbox</type>
</CustomField>