force-app/main/default/objects/Contact/fields/Zendesk__isCreatedUpdatedFlag__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in trigger to prevent looping of after insert and update. This flag is used to stop the contact that came for creation to get updated again thereby preventing the loop</description>
    <label>isCreatedUpdatedFlag</label>
    <type>Checkbox</type>
</CustomField>