force-app/main/default/objects/Contact/fields/Zendesk__zendesk_id__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__zendesk_id__c</fullName>
    <label>Zendesk User Id</label>
    <length>70</length>
    <type>Text</type>
</CustomField>