force-app/main/default/objects/Contact/fields/Zendesk__Zendesk_oldTags__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Zendesk_oldTags__c</fullName>
    <label>Zendesk_oldTags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>