force-app/main/default/objects/Contact/validationRules/Mailing_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_Address</fullName>
    <active>true</active>
    <description>Please complete with full address details</description>
    <errorConditionFormula>OR(
    ISBLANK(MailingStreet),
    ISBLANK(MailingCity),
    ISBLANK(MailingState),
    ISBLANK(MailingPostalCode)
)</errorConditionFormula>
    <errorMessage>Please complete this contacts details with full address details. fields required are Mailing Street, Mailing City, Mailing State, &amp; Mailing Postcode</errorMessage>
</ValidationRule>